# Gojo

./: .flake8  .gitattributes  .gitignore  CONTRIBUTING.md  DATASET_CARD.md  GITHUB_UPLOAD_GUIDE.md  LFS_MIGRATION_GUIDE.md  LICENSE  LIMITATIONS.md  MANIFEST.in  MLOPS.md  MODEL_CARD.md  POLICY_LOG.md  PUBLICATION_INFRASTRUCTURE.md  README.md  SECURITY.md  THREAT_MODEL.md  UI_IMPROVEMENTS.md  UPGRADE_SUMMARY.md  debug_url.py  demo_practical.py  generate_plots.py  gojo_dataset_builder.py  gojo_dataset_v1.csv  migrate_policy.py  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_benchmark.txt  requirements_production.txt  results.csv  run_gojo.bat  setup.cfg  setup.py  test_integration.py  validate_claims.py  verify_accuracy.py
.github/workflows/: ci.yml  release.yml
configs/: allowlist_domains.txt  asn_allowlist.txt  asn_denylist.txt  blocklist_domains.txt  brands.txt  shorteners.txt  suspicious_tlds.txt
data/ood/: ood_combined.csv  ood_sources.json  phishingdb_ood.csv  phishingdb_ood_sources.json
phish_detector/: __init__.py  __main__.py  advanced_detection.py  adversarial.py  analyze.py  benchmark.py  brand_risk.py  cli.py  content_analysis.py  data_prep.py  drift_detection.py  dynamic_tld_learning.py  enrichment.py  experiment_manifest.py  features.py  feedback.py  intent.py  ml_char_ngram.py  ml_ensemble.py  ml_lexical.py  offpolicy.py  parsing.py  policy.py  policy_v2.py  report.py  reward.py  rules.py  scoring.py  train.py  typosquat.py
scripts/: __init__.py  export_tables.py  ood_build.py  ood_phishingdb_build.py  verify_publication_infrastructure.py
tests/: test_cli_bulk.py  test_features.py  test_parsing.py  test_policy_v2.py  test_scoring.py  test_webapp.py
webapp/: __init__.py  app.py
webapp/static/: heartbeat.js  style.css
webapp/templates/: error.html  index.html  research.html
