[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gojo"
version = "2.0.0"
description = "Gojo: production-grade phishing URL detector with ML ensemble and Thompson Sampling RL"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Personal Use Only (Non-Commercial)"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "phishing",
    "security",
    "machine-learning",
    "reinforcement-learning",
    "thompson-sampling",
    "url-analysis",
    "cybersecurity",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
production = [
    "waitress>=3.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "pylint>=2.17.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/gojo"
Documentation = "https://github.com/yourusername/gojo#readme"
Repository = "https://github.com/yourusername/gojo"
"Bug Tracker" = "https://github.com/yourusername/gojo/issues"

[project.scripts]
gojo = "phish_detector.__main__:main"
gojo-train = "phish_detector.train:main"

[tool.setuptools]
packages = ["phish_detector", "webapp"]

[tool.setuptools.package-data]
phish_detector = ["py.typed"]
webapp = ["templates/*.html", "static/*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | models
  | logs
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "build", "dist", "models", "logs"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ['\.venv', 'build', 'dist', 'models', 'logs']

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
