# Gojo - Package Metadata
[metadata]
name = gojo
version = 2.0.0
description = Gojo: production-grade phishing URL detector with ML ensemble and Thompson Sampling RL
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = Personal Use Only (Non-Commercial)
license_files = LICENSE
url = https://github.com/yourusername/gojo
project_urls =
    Bug Tracker = https://github.com/yourusername/gojo/issues
    Documentation = https://github.com/yourusername/gojo#readme
    Source Code = https://github.com/yourusername/gojo
keywords = phishing, security, machine-learning, reinforcement-learning, thompson-sampling
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Security
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.10
install_requires = file: requirements.txt
include_package_data = True
zip_safe = False

[options.packages.find]
exclude = tests, data, logs, models

[options.extras_require]
production =
    waitress>=3.0.0
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    mypy>=1.5.0
    pylint>=2.17.0
    black>=23.7.0
    isort>=5.12.0

[options.entry_points]
console_scripts =
    gojo = phish_detector.__main__:main
    gojo-train = phish_detector.train:main
